[package]
name = "libd"
version = "0.1.0"
edition = "2021"

[dependencies]
buddy_system_allocator = "0.9"
bitflags = "1.2.1"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
spin = "0.7.1"
embedded-graphics = "0.7.1"
virtio-input-decoder = "0.1.4"
derive_more = "0.99.17"
tinybmp = "0.3.1"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
enum_dispatch = "0.3"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.9.1"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
rlibc = "1.0.0"
volatile = "0.4.6"
