[package]
name = "run_tests"
version = "0.1.0"
edition = "2021"

[features]
shell = []
basic = []
busybox = []
lua = []
iozone = []
libcbench = []
libctest = []
iperf = []
netperf = []
lmbench = []
# cyclictest is not supported yet
final = []
ltp = []
git = []
full = [
    "basic",
    "busybox",
    "lua",
    "iozone",
    "libcbench",
    "libctest",
    "iperf",
    "netperf",
    "lmbench",
    # "cyclictest", // cyclictest is not supported yet
    "final",
    "git",
    "ltp",
]
default = []

[dependencies]
libd = { workspace = true }
